<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="425dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:columnCount="3"
            app:rowCount="4">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/seven"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/eight"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/nine"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/four"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/five"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/six"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/one"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/two"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/three"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/zero"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/decimal"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnEqualsTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/equalsTo"
                android:textSize="40sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            app:columnCount="1"
            app:rowCount="6">

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/div"
                android:textSize="40sp"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/mul"
                android:textSize="40sp"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/sub"
                android:textSize="40sp"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/add"
                android:textSize="40sp"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnAc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/ac"
                android:textSize="40sp"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="71dp"
                android:minHeight="48dip"
                android:onClick="onClick"
                android:text="@string/c"
                android:textSize="40sp"
                app:layout_columnWeight="1" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="304dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtSolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/txtOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textSize="35sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>